force-app/main/default/objects/Loan_Debt_Disclosure__c/Loan_Debt_Disclosure__c.object-meta.xml
<CustomObject>
    <label>Loan / Debt Disclosure</label>
    <nameField>
        <displayFormat>Disclosure ID - {00}</displayFormat>
        <label>Loan / Debt Disclosure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan / Debt Disclosures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>