force-app/main/default/objects/Loan_Debt_Disclosure__c/fields/TB_Affiliate_Audit__c.field-meta.xml
<CustomField>
    <fullName>TB_Affiliate_Audit__c</fullName>
    <label>TB Affiliate Audit</label>
    <referenceTo>TB_Affiliate_Audit__c</referenceTo>
    <relationshipLabel>Loan / Debt Disclosures</relationshipLabel>
    <relationshipName>Loan_Debt_Disclosures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>