force-app/main/default/objects/Loan_Debt_Disclosure__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <label>Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>